[package]
name = "gh-config"
description = "Loads config and hosts for gh CLI."
version = "0.2.2"
license = "MIT"
homepage = "https://github.com/siketyan/gh-config-rs"
repository = "https://github.com/siketyan/gh-config-rs.git"
readme = "README.md"
edition = "2021"
authors = [
    # Thank you for your contribution!
    # While contributing to this project, feel free to add your name here :)
    "Naoki Ikeguchi <me@s6n.jp>",
]

[dependencies]
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"

anyhow = { version = "1.0", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.46.0"
features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
]

[target.'cfg(target_os = "macos")'.dependencies]
base64 = "0.21.4"
hex = "0.4.3"
security-framework = "2.9"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "3.0", features = ["rt-async-io-crypto-rust"] }

[features]
cli = ["anyhow", "clap", "serde_json"]
default = []

[[bin]]
name = "gh-config"
required-features = ["cli"]
