[package]
name = "gh-config"
description = "Loads config and hosts for gh CLI."
authors = ["Natsuki Ikeguchi <me@s6n.jp>"]
version = "0.3.2"
license = "MIT"
homepage = "https://github.com/siketyan/gh-config-rs"
repository = "https://github.com/siketyan/gh-config-rs.git"
readme = "README.md"
edition = "2021"

[dependencies]
dirs = "5.0.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0.59"

anyhow = { version = "1.0.82", optional = true }
clap = { version = "4.5.4", features = ["derive"], optional = true }
serde_json = { version = "1.0.116", optional = true }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Foundation",
    "Win32_Security_Credentials",
]

[target.'cfg(target_os = "macos")'.dependencies]
base64 = "0.22.1"
hex = "0.4.3"
security-framework = "2.10"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "3.0.1", features = ["rt-async-io-crypto-rust"] }

[features]
cli = ["anyhow", "clap", "serde_json"]
default = []

[[bin]]
name = "gh-config"
required-features = ["cli"]
